fix bugs in displaying api data functions

--- a/src/app/components/business/business.component.html
+++ b/src/app/components/business/business.component.html
@@ -5,7 +5,7 @@
   <ul *ngFor="let business of business">
     <li>business name:{{business.business_name}}</li>
     <li> neighbourhood: {{business.neighbourhood}}</li>
-    <li>admin: {{business.admin}}</li>
+    <li>admin: {{business.profile}}</li>
     <li>business_email: {{business.business_email}}</li>
   </ul>
 </div>
