write create post function and list post function and display them in html

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,8 +2,8 @@
  <nav class="py-2 bg-dark border-bottom">
    <div class="container d-flex flex-wrap">
      <ul class="nav me-auto ">
-       <li class="nav-item"><a href="#" class="nav-link link-white px-2 active" aria-current="page">Home</a></li>
-       <li class="nav-item"><a href="#" class="nav-link link-white px-2">Features</a></li>
+       <li class="nav-item"><a href="" class="nav-link link-white px-2 active" aria-current="page">Home</a></li>
+       <li class="nav-item"><a routerlink=""  class="nav-link link-white px-2">Posts</a></li>
        <li class="nav-item"><a href="#" class="nav-link link-white px-2">Pricing</a></li>
        <li class="nav-item"><a href="#" class="nav-link link-white px-2">FAQs</a></li>
        <li class="nav-item"><a href="#" class="nav-link link-white px-2">About</a></li>
@@ -26,10 +26,13 @@
      </form>
    </div>
  </header>
+ 
 <!-- End Navbar  -->
 
 
 <app-users></app-users>
 <app-business></app-business>
 <app-neighbourhood></app-neighbourhood>
-  
+<app-posts></app-posts>
+<app-post-list></app-post-list>
+<!-- <router-outlet></router-outlet> -->
