--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -35,4 +35,5 @@
 <app-neighbourhood></app-neighbourhood>
 <app-posts></app-posts>
 <app-post-list></app-post-list>
+<app-post-details></app-post-details>
 <!-- <router-outlet></router-outlet> -->
