--- a/src/app/components/posts/posts.component.html
+++ b/src/app/components/posts/posts.component.html
@@ -1,4 +1,5 @@
 <p>posts works!</p>
+<!-- Create Posts  -->
 <div>
   <div class="submit-form">
     <div *ngIf="!submitted">
@@ -18,5 +19,5 @@
     </div>
   </div>
 </div>
-
+<!-- End Create posts  -->
 
