create route for neighbourhood and posts

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,12 +1,14 @@
+<!-- <div class="container mt-3"> -->
+  <router-outlet></router-outlet>
+<!-- </div> -->
+
 <!-- Navbar  -->
- <nav class="py-2 bg-dark border-bottom">
+ <!-- <nav class="py-2 bg-dark border-bottom">
    <div class="container d-flex flex-wrap">
      <ul class="nav me-auto ">
        <li class="nav-item"><a href="" class="nav-link link-white px-2 active" aria-current="page">Home</a></li>
-       <li class="nav-item"><a routerlink=""  class="nav-link link-white px-2">Posts</a></li>
-       <li class="nav-item"><a href="#" class="nav-link link-white px-2">Pricing</a></li>
-       <li class="nav-item"><a href="#" class="nav-link link-white px-2">FAQs</a></li>
-       <li class="nav-item"><a href="#" class="nav-link link-white px-2">About</a></li>
+       <li class="nav-item"><a routerlink="/post"  class="nav-link link-white px-2">Posts</a></li>
+       <li class="nav-item"><a href="#" class="nav-link link-white px-2">Business</a></li>
      </ul>
      <ul class="nav">
        <li class="nav-item"><a href="#" class="nav-link link-white px-2">Login</a></li>
@@ -25,15 +27,14 @@
        <input type="search" class="form-control" placeholder="Search..." aria-label="Search">
      </form>
    </div>
- </header>
- 
+ </header> -->
 <!-- End Navbar  -->
 
+<!-- <app-users></app-users> -->
+<!-- <app-business></app-business> -->
+<!-- <app-neighbourhood></app-neighbourhood> -->
+<!-- <app-posts></app-posts> -->
+<!-- <app-post-list></app-post-list> -->
+<!-- <app-post-details></app-post-details> -->
 
-<app-users></app-users>
-<app-business></app-business>
-<app-neighbourhood></app-neighbourhood>
-<app-posts></app-posts>
-<app-post-list></app-post-list>
-<app-post-details></app-post-details>
-<!-- <router-outlet></router-outlet> -->
+
