write create business and update business functions

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,14 +1,11 @@
-<!-- <div class="container mt-3"> -->
-  <router-outlet></router-outlet>
-<!-- </div> -->
 
 <!-- Navbar  -->
- <!-- <nav class="py-2 bg-dark border-bottom">
+ <nav class="py-2 bg-dark border-bottom">
    <div class="container d-flex flex-wrap">
      <ul class="nav me-auto ">
        <li class="nav-item"><a href="" class="nav-link link-white px-2 active" aria-current="page">Home</a></li>
-       <li class="nav-item"><a routerlink="/post"  class="nav-link link-white px-2">Posts</a></li>
-       <li class="nav-item"><a href="#" class="nav-link link-white px-2">Business</a></li>
+       <li class="nav-item"><a routerlink="" href="/post" class="nav-link link-white px-2">Posts</a></li>
+       <li class="nav-item"><a href="/business" class="nav-link link-white px-2">Business</a></li>
      </ul>
      <ul class="nav">
        <li class="nav-item"><a href="#" class="nav-link link-white px-2">Login</a></li>
@@ -27,9 +24,9 @@
        <input type="search" class="form-control" placeholder="Search..." aria-label="Search">
      </form>
    </div>
- </header> -->
+ </header>
 <!-- End Navbar  -->
-
+ <router-outlet></router-outlet>
 <!-- <app-users></app-users> -->
 <!-- <app-business></app-business> -->
 <!-- <app-neighbourhood></app-neighbourhood> -->
