--- a/src/app/components/neighbourhood/neighbourhood.component.html
+++ b/src/app/components/neighbourhood/neighbourhood.component.html
@@ -1,5 +1,5 @@
 <p>neighbourhood works!</p>
-<button (click)="findNeighbourhood()">Neighbourhood</button>
+<!-- <button (click)="findNeighbourhood()">Neighbourhood</button>
 
 <div *ngIf="neighbourhood">
   <ul *ngFor="let neighbourhood of neighbourhood">
@@ -8,18 +8,18 @@
     <li>occupants: {{neighbourhood.occupants}}</li>
     <li>description: {{neighbourhood.description}}</li>
   </ul>
-</div>
+</div> -->
 
-<form #neighbourhoodPost="ngForm" (ngSubmit)="onSubmit(neighbourhoodPost.value)" method="POST" class="form-group">
+<!-- <form #neighbourhoodPost="ngForm" (ngSubmit)="onSubmit(neighbourhoodPost.value)" method="POST" class="form-group">
   <input type="text" name="neighbourhood_name" id="neighbourhood_name" ngModel placeholder="neighbourhood_name" class="form-control">
   <input type="text" name="location" id="location" ngModel placeholder="location" class="form-control">
   <input type="number" name="occupants" id="occupants" ngModel placeholder="occupants" class="form-control">
   <input type="text" name="description" id="description" ngModel placeholder="description" class="form-control">
 
   <button type="submit" class="btn btn-primary">Add Neighbourhood</button>
-</form>
+</form> -->
 
-  <form #updateneighbourhood="ngForm"
+  <!-- <form #updateneighbourhood="ngForm"
     (ngSubmit)="updateNeighbourhood(updateneighbourhood.value.id,updateneighbourhood.value)" method="POST">
     <input type="number" name="id" id="id" ngModel placeholder="id">
     <input type="text" name="neighbourhood_name" id="neighbourhood_name" ngModel placeholder="neighbourhood_name">
@@ -27,38 +27,41 @@
     <input type="number" name="occupants" id="occupants" ngModel placeholder="occupants">
     <input type="text" name="description" id="description" ngModel placeholder="description">
     <button type="submit">Update Neighbourhood</button>
-  </form> 
+  </form>  -->
 
-<div class="list row">
-  <div class="col-md-8">
-    <div class="input-group mb-3">
-      
-      <div class="input-group-append">
+<app-neighbourhood-list></app-neighbourhood-list>
+
+<!-- Add Neighbour hood form  -->
+<div class="container">
+  <div>
+    <div class="submit-form">
+      <div *ngIf="!submitted">
+        <div class="form-group">
+          <label for="title">Title</label>
+          <input type="text" class="form-control" id="neighbourhood_name" required [(ngModel)]="neighbourhood.neighbourhood_name"
+            name="neighbourhood_name" />
+        </div>
+        <div class="form-group">
+          <label for="description">Description</label>
+          <input class="form-control" id="description" required [(ngModel)]="neighbourhood.description" name="description" />
+        </div>
+        <div class="form-group">
+          <label for="location">Location</label>
+          <input class="form-control" id="location" required [(ngModel)]="neighbourhood.location"
+            name="location" />
+        </div>
+        <div class="form-group">
+          <label for="occupants">Occupants</label>
+          <input class="form-control" id="occupants" required [(ngModel)]="neighbourhood.occupants"
+            name="occupants" type="number" />
+        </div>
+        <button (click)="saveNeighbourhood()" class="btn btn-success">Submit</button>
+      </div>
+      <div *ngIf="submitted">
+        <h4>Tutorial was submitted successfully!</h4>
+        <button class="btn btn-success" (click)="newNeighbourhood()">Add</button>
       </div>
     </div>
   </div>
-  <div class="col-md-6">
-    <h4>Neighbourhood List</h4>
-    <ul class="list-group">
-      <li class="list-group-item" *ngFor="let neighbourhood of neighbourhood; let i = index" [class.active]="i == currentIndex"
-        (click)="setActiveNeighbourhood(neighbourhood, i)">{{ neighbourhood.neighbourhood_name}} </li>
-    </ul>
-    <button class="m-3 btn btn-sm btn-danger" (click)="removeAllNeighbourhoods()"> Remove All </button>
-  </div>
 </div>
-<div class="col-md-6">
-  <div *ngIf="currentNeighbourhood">
-    <h4>Tutorial</h4>
-    <div>
-      <label><strong>Title:</strong></label> {{ currentNeighbourhood.neighbourhood_name}} </div>
-    <div>
-      <label><strong>Description:</strong></label> {{ currentNeighbourhood.description }} </div>
-    <div>
-    <a class="badge badge-warning" routerLink="{{currentNeighbourhood.id}}"> Edit </a>
-  </div>
-  <div *ngIf="!currentNeighbourhood">
-    <br />
-    <p>Please click on a Tutorial...</p>
-  </div>
-</div>
-
+<!-- End of form  -->
