--- a/src/app/components/business-details/business-details.component.html
+++ b/src/app/components/business-details/business-details.component.html
@@ -1,1 +1,32 @@
 <p>business-details works!</p>
+<div class="container">
+  <div>
+    <div *ngIf="!currentPost.id" class="edit-form">
+      <h4>Tutorial</h4>
+      <form>
+        <div class="form-group">
+          <label for="title">Title</label>
+          <input type="text" class="form-control" id="post_name" [(ngModel)]="currentPost.post_name" name="post_name" />
+        </div>
+        <div class="form-group">
+          <label for="description">Description</label>
+          <input type="text" class="form-control" id="post_content" [(ngModel)]="currentPost.post_content"
+            name="post_content" />
+        </div>
+        <div class="form-group">
+          <label><strong>Status:</strong></label> {{ currentPost.pub_date ? "Published" : "Pending" }} </div>
+      </form>
+      <button class="badge badge-primary mr-2" *ngIf="currentPost.pub_date" (click)="updatePublished(false)"> UnPublish
+      </button>
+      <button *ngIf="!currentPost.pub_date" class="badge badge-primary mr-2" (click)="updatePublished(true)"> Publish
+      </button>
+      <button class="badge badge-danger mr-2" (click)="deletePost()"> Delete </button>
+      <button type="submit" class="badge badge-success mb-2" (click)="updatePost()"> Update </button>
+      <p>{{ message }}</p>
+    </div>
+    <div *ngIf="!currentPost.id">
+    <br />
+    <p>Cannot access this Tutorial...</p>
+    </div>
+  </div>
+</div>
